[tool.poetry]
name = "guri"
version = "0.0.1"
description = "Event-Driven Framework for Highly-Scalable Realtime Data Loads"
authors = ["Paul Herrera <pauljherrera@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.9"
pika = "^1.2.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
